tests/integration/snapshots/integration__commands__format__uglify_OBJECT_LEADING_NEWLINE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
{
"key": "val"}
stdout ---
{"key":"val"}

stderr ---
