tests/integration/snapshots/integration__commands__format__uglify_PRETTIER_KEY_VALUE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

stdout ---
{"string":"stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring","stringstringstringstringstringstringstringstring":"stringstringstringstringstringstringstringstring","stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring":"string"}

stderr ---
